Adjusted the api test base to have proper clean up.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,4 +8,13 @@ spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDri
 spring.jpa.hibernate.ddl-auto=validate
 
 # Flyway settings for tests
-spring.flyway.enabled=true 
+spring.flyway.enabled=true
+
+# Test-specific configurations
+spring.jpa.show-sql=false
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=false
+
+# Disable cache for tests to avoid stale data
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false 
